--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Roboto+Mono:wght@300&display=swap" rel="stylesheet">
     <!-- end: font -->
     <link rel="stylesheet" href="./css/fonts/themify-icons/themify-icons.css">
-    <link rel="stylesheet" href="./CSS/home.css">
+    <link rel="stylesheet" href="./css/home.css">
 </head>
 <body>
     <!-- begin: header -->
